# dashboard

./: CLAUDE.md  README.md  dataset.html  index.html  pyproject.toml
.github/workflows/: update-data.yml
code/: pyproject.toml
code/scripts/: gen_models.py
code/src/openneuro_dashboard/: __init__.py  __main__.py  check_github.py  check_s3_files.py  check_s3_version.py  converter.py  fetch_graphql.py  models.py  summarize.py  timestamps.py  utils.py
code/tests/: conftest.py
code/tests/fixtures/: all-datasets.json  datasets-registry.json
code/tests/integration/: test_pipeline.py
code/tests/unit/: test_check_s3_files.py  test_check_s3_version.py  test_gen_data_roundtrip.py  test_schema_validation.py  test_summarize.py  test_summarize_subtypes.py  test_timestamps.py  test_utils.py
css/: dataset.css  styles.css
data/: all-datasets.json  datasets-registry.json
data/datasets/ds000001/: github.json  s3-diff.json  s3-version.json  snapshots.json
data/datasets/ds000002/: github.json  s3-diff.json  s3-version.json  snapshots.json
data/datasets/ds000003/: github.json  s3-diff.json  s3-version.json
data/datasets/ds000005/: github.json  s3-diff.json  s3-version.json  snapshots.json
data/datasets/ds000006/: github.json  (+2 more)
data/timestamps/: github.json  s3-files.json  s3-version.json
js/: dataset.js  main.js  utils.js
schema/: openneuro-dashboard.yaml
scripts/: check_github.py  check_s3_files.py  check_s3_version.py  fetch_graphql.py  gen-data.py  summarize.py  utils.py
scripts/gen_data/: git_tree.py  github.py  graphql.py  s3_diff.py  s3_version.py
(+10656 files in other folders)
